<resources>
    <string name="app_name">Zikub</string>

    <!-- Strings related to login -->
    <string name="prompt_search">Type to search...</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_prompt_password">Confirm Password</string>
    <string name="action_1"><b><font color='#ffffff'>1</font></b> \n\n Press here \n to add \n your first \n song</string>
    <string name="action_2"><b><font color='#ffffff'>2</font></b> \n\n Press here \n to add \n your second \n song</string>
    <string name="action_3"><b><font color='#ffffff'>3</font></b> \n\n Press here \n to add \n your third \n song</string>
    <string name="action_4"><b><font color='#ffffff'>4</font></b> \n\n Press here \n to add \n your fourth \n song</string>
    <string name="action_5"><b><font color='#ffffff'>5</font></b> \n\n Press here \n to add \n your last \n song</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_share">Share your Player</string>
    <string name="username">Playlist of </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_password">Wrong login or password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="footer_sign_up">By signin up, you agree to our <b>Terms of Use</b> and <b>Privacy Policy</b></string>
    <string name="description_sign_in">Welcome back. Nice to meet you again!</string>
    <string name="description_search">Search song</string>
    <string name="description_sign_up">Sign Up and start to share your music</string>
    <string name="titre_music">Title</string>
    <string name="description_main_page_text">Share your favorite music to your friends.</string>
    <string name="login_social_text">Login with social</string>
    <string name="term_condition_text"><u>Terms et Conditions</u></string>
    <string name="username_exist">This username is already used</string>
    <string name="password_not_same">The password not match with the confirm password</string>
    <string name="email_exist">An account is associated to this e-mail</string>
</resources>
