<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="3">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="end|bottom"
            android:background="#b2bfb6"
            android:text="@string/action_5"
            android:textAllCaps="false"
            android:onClick="music5" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:background="#e2f1f1"
            android:textAllCaps="false"
            android:text="@string/action_4"
            android:onClick="music4"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:background="#d1e1e8"
            android:textAllCaps="false"
            android:text="@string/action_3"
            android:onClick="music3"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#e4dfe5"
            android:textAllCaps="false"
            android:text="@string/action_2"
            android:onClick="music2"/>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="#ff4142"
            android:textAllCaps="false"
            android:text="@string/action_1"
            android:onClick="music1"/>

        </FrameLayout>
</LinearLayout>