<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ludovic.zikub.LoginActivity"
    android:background="@color/colorPrimary">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="301dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@mipmap/logo" />

            <View
                android:id="@+id/view"
                android:layout_width="36dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_horizontal"
                android:weightSum="1"
                android:layout_marginBottom="30dp">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/description_main_page_text"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="10dp">


                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0.5"
                    android:background="#fff"
                    android:text="@string/action_login"
                    android:textColor="#000"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/email_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0.5"
                    android:background="#000"
                    android:text="@string/action_sign_up"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:gravity="center_horizontal"
                android:weightSum="1"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/login_social_text"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="36dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#fff" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
